hide things off screen at -10000 px instead of -1000. fixes #220

--- a/select2.css
+++ b/select2.css
@@ -505,4 +505,4 @@ disabled look for already selected choices in the results dropdown
 .select2-result-unselectable .select2-result-selectable .select2-match { text-decoration: underline; }
 .select2-result-unselectable .select2-match { text-decoration: none; }
 
-.select2-offscreen { position: absolute; left: -1000px; }
+.select2-offscreen { position: absolute; left: -10000px; }
